ghc-6.2/hslibs/win32/Win32Resource_stub_ffi.h

#include <windows.h>
#include "errors.h"
#include "win32debug.h"
#include "finalizers.h"
#include "HsFFI.h"
extern void* prim_beginUpdateResource(char * arg1,int arg2);
extern HANDLE access_prim_beginUpdateResource_res1(HsPtr);
extern int access_prim_beginUpdateResource_gc_failed(HsPtr);
extern void* access_prim_beginUpdateResource_gc_failstring(HsPtr);
extern UINT prim_iMAGE_BITMAP();
extern UINT prim_iMAGE_ICON();
extern UINT prim_iMAGE_CURSOR();
extern void* prim_copyImage(HANDLE arg1,UINT arg2,int arg3,int arg4,UINT arg5);
extern HANDLE access_prim_copyImage_res1(HsPtr);
extern int access_prim_copyImage_gc_failed(HsPtr);
extern void* access_prim_copyImage_gc_failstring(HsPtr);
extern void* prim_endUpdateResource(HANDLE arg1,BOOL arg2);
extern int access_prim_endUpdateResource_gc_failed(HsPtr);
extern void* access_prim_endUpdateResource_gc_failstring(HsPtr);
extern void * prim_rT_ACCELERATOR();
extern void * prim_rT_ANICURSOR();
extern void * prim_rT_ANIICON();
extern void * prim_rT_BITMAP();
extern void * prim_rT_CURSOR();
extern void * prim_rT_DIALOG();
extern void * prim_rT_FONT();
extern void * prim_rT_FONTDIR();
extern void * prim_rT_GROUP_CURSOR();
extern void * prim_rT_GROUP_ICON();
extern void * prim_rT_HTML();
extern void * prim_rT_ICON();
extern void * prim_rT_MENU();
extern void * prim_rT_MESSAGETABLE();
extern void * prim_rT_RCDATA();
extern void * prim_rT_STRING();
extern void * prim_rT_VERSION();
extern void* prim_findResource(HMODULE arg1,char * arg2,void * arg3);
extern HRSRC access_prim_findResource_res1(HsPtr);
extern int access_prim_findResource_gc_failed(HsPtr);
extern void* access_prim_findResource_gc_failstring(HsPtr);
extern void* prim_findResourceEx(HMODULE arg1,LPCTSTR arg2,void * arg3,WORD arg4);
extern HRSRC access_prim_findResourceEx_res1(HsPtr);
extern int access_prim_findResourceEx_gc_failed(HsPtr);
extern void* access_prim_findResourceEx_gc_failstring(HsPtr);
extern int prim_lR_DEFAULTSIZE();
extern UINT prim_lR_DEFAULTCOLOR();
extern UINT prim_lR_CREATEDIBSECTION();
extern UINT prim_lR_LOADFROMFILE();
extern UINT prim_lR_LOADMAP3DCOLORS();
extern UINT prim_lR_LOADTRANSPARENT();
extern UINT prim_lR_MONOCHROME();
extern UINT prim_lR_SHARED();
extern void* prim_loadImage(HINSTANCE arg1,LPCTSTR arg2,UINT arg3,int arg4,int arg5,UINT arg6);
extern HANDLE access_prim_loadImage_res1(HsPtr);
extern int access_prim_loadImage_gc_failed(HsPtr);
extern void* access_prim_loadImage_gc_failstring(HsPtr);
extern void* prim_loadResource(HMODULE arg1,HRSRC arg2);
extern HGLOBAL access_prim_loadResource_res1(HsPtr);
extern int access_prim_loadResource_gc_failed(HsPtr);
extern void* access_prim_loadResource_gc_failstring(HsPtr);
extern void* prim_lockResource(HGLOBAL arg1);
extern void * access_prim_lockResource_res1(HsPtr);
extern int access_prim_lockResource_gc_failed(HsPtr);
extern void* access_prim_lockResource_gc_failstring(HsPtr);
extern void* prim_sizeofResource(HMODULE arg1,HRSRC arg2);
extern DWORD access_prim_sizeofResource_res1(HsPtr);
extern int access_prim_sizeofResource_gc_failed(HsPtr);
extern void* access_prim_sizeofResource_gc_failstring(HsPtr);
extern void* prim_updateResource(HANDLE arg1,LPCTSTR arg2,void * arg3,WORD arg4,void * arg5,DWORD arg6);
extern int access_prim_updateResource_gc_failed(HsPtr);
extern void* access_prim_updateResource_gc_failstring(HsPtr);